feat(store): complete public search APIs
